--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,6 +77,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Dependencies
+      if: ${ matrix.name == "linux-arm64" }
+      run: |
+        sudo apt-get update && \
+        sudo apt-get upgrade -y && \
+        sudo apt-get install -y gcc-arm-linux-gnueabihf && \
+        sudo apt-get clean
+
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
       with:
