--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Dependencies
-      if: ${ matrix.name == "linux-arm64" }
+      if: matrix.name == "linux-arm64"
       run: |
         sudo apt-get update && \
         sudo apt-get upgrade -y && \
