--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,12 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
 
-[target.armv7-unknown-linux-gnueabihf]
+# musl target configurations for static linking
+[target.x86_64-unknown-linux-musl]
+linker = "musl-gcc"
+
+[target.armv7-unknown-linux-musleabihf]
 linker = "arm-linux-gnueabihf-gcc"
+
+[target.aarch64-unknown-linux-musl]
+linker = "aarch64-linux-gnu-gcc"
